# incubator-milagro-crypto-c

./: .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.cmake  DISCLAIMER  Dockerfile  Makefile  README.md  amcl.pc.in  config.mk
benchmark/: CMakeLists.txt  bench.c.in  bench.h  benchtest_bls_ZZZ.c.in  benchtest_ec_ZZZ.c.in  benchtest_ecdsa_ZZZ.c.in  benchtest_ff_WWW.c.in  benchtest_mpin_ZZZ.c.in  benchtest_paillier.c.in  benchtest_pair_ZZZ.c.in  benchtest_rsa_WWW.c.in
cmake/: AMCLParameters.cmake  PythonSiteDirs.cmake
cmocka_tests/: CMakeLists.txt  README.md  aes_test.c  cmake_install.cmake  crypto_context.c  test_main.c
cmocka_tests/cmake/: AddCmockaTest.cmake  Amcl.cmake  Cmocka.cmake  CodeCoverage.cmake
cmocka_tests/include/: aes_test.h  crypto_context.h
doc/: AMCL.dox  Doxyfile
examples/: CMakeLists.txt  example_bls_ZZZ.c.in  example_bls_sss_ZZZ.c.in  example_dvs_ZZZ.c.in  example_ecdh_ZZZ.c.in  example_mpin_ZZZ.c.in  example_paillier.c  example_rsa_WWW.c.in  testall.c  testbls_ZZZ.c.in  testmpin_ZZZ.c.in  testwcc_ZZZ.c.in
include/: amcl.h.in  arch.h.in  big.h.in  bls.h.in  bls192.h.in  bls256.h.in  bls_ietf.h.in  config_curve.h.in  ecdh.h.in  ecdh_support.h  ecp.h.in  ecp2.h.in  ecp4.h.in  ecp8.h.in  ff.h.in  fp.h.in  fp12.h.in  fp16.h.in  fp2.h.in  fp24.h.in  fp4.h.in  fp48.h.in  fp8.h.in  hash_to_field.h.in  mpin.h.in  paillier.h  pair.h.in  pair192.h.in  pair256.h.in  pbc_support.h  randapi.h  rsa.h.in  rsa_support.h  utils.h
python/: CMakeLists.txt  bls_ZZZ.py.in  mpin_ZZZ.py.in  run_bls_ZZZ.py.in  wcc_ZZZ.py.in
scripts/: build.sh  buildMulti.sh  coverage.sh  delete.sh  docker.sh  format.sh  gitleaks.sh  test.sh
src/: aes.c  big.c  big.c.in  bls.c  bls.c.in  bls192.c  bls192.c.in  bls256.c  bls256.c.in  bls_ietf.c.in  ecdh.c  ecdh.c.in  ecdh_support.c  ecp.c  ecp.c.in  ecp2.c  ecp2.c.in  ecp4.c  ecp4.c.in  ecp8.c  ecp8.c.in  ff.c  ff.c.in  fp.c  fp.c.in  fp12.c  fp12.c.in  fp16.c  fp16.c.in  fp2.c  fp2.c.in  fp24.c  fp24.c.in  fp4.c  fp4.c.in  fp48.c  fp48.c.in  fp8.c  fp8.c.in  gcm.c  (+60 more)
test/: CMakeLists.txt  test_aes_decrypt.c  test_aes_encrypt.c  test_big_arithmetics_XXX.c.in  test_big_consistency_XXX.c.in  test_bls_ZZZ.c.in  test_bls_ietf_ZZZ.c.in  test_bls_ietf_h2c_G1_ZZZ.c.in  test_bls_ietf_h2c_G2_ZZZ.c.in  test_bls_sss_ZZZ.c.in  test_ecc_ZZZ.c.in  test_ecdh_ZZZ.c.in  test_ecdsa_keypair_ZZZ.c.in  test_ecdsa_sign_ZZZ.c.in  test_ecdsa_verify_ZZZ.c.in  test_ecp2_arithmetics_ZZZ.c.in  test_ecp4_arithmetics_ZZZ.c.in  test_ecp8_arithmetics_ZZZ.c.in  test_ecp_arithmetics_ZZZ.c.in  test_ff_consistency_WWW.c.in  test_fp12_arithmetics_YYY.c.in  test_fp24_arithmetics_YYY.c.in  test_fp2_arithmetics_YYY.c.in  test_fp4_arithmetics_YYY.c.in  test_fp8_arithmetics_YYY.c.in  test_fp_arithmetics_YYY.c.in  test_gcm_decrypt.c  test_gcm_encrypt.c  (+37 more)
(+65 files in other folders)
